# today-your-day

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
config/: settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
recipients/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
recipients/migrations/: 0001_initial.py  0002_recipient_music.py  0002_remove_recipient_created_at_alter_recipient_name_and_more.py  0003_recipient_uuid.py
recipients/templates/recipients/: recipient_invite.html  recipient_rollingpapers_display.html  rollingpapers_display.html  write_rollingpaper.html
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_admin.py
users/migrations/: 0001_initial.py
users/templates/users/: home.html  login.html  same_name_recipients.html  signup.html  signup_complete.html  simple_signup.html
